add_executable(examples.0006.file_io.count_all_spaces_in_file ${CMAKE_CURRENT_LIST_DIR}/count_all_spaces_in_file.cc)
add_test(examples.0006.file_io.count_all_spaces_in_file examples.0006.file_io.count_all_spaces_in_file)
add_executable(examples.0006.file_io.file_loader ${CMAKE_CURRENT_LIST_DIR}/file_loader.cc)
add_test(examples.0006.file_io.file_loader examples.0006.file_io.file_loader)
add_executable(examples.0006.file_io.file_loader_options ${CMAKE_CURRENT_LIST_DIR}/file_loader_options.cc)
add_test(examples.0006.file_io.file_loader_options examples.0006.file_io.file_loader_options)
add_executable(examples.0006.file_io.ibuf_file ${CMAKE_CURRENT_LIST_DIR}/ibuf_file.cc)
add_test(examples.0006.file_io.ibuf_file examples.0006.file_io.ibuf_file)
add_executable(examples.0006.file_io.obuf_file ${CMAKE_CURRENT_LIST_DIR}/obuf_file.cc)
add_test(examples.0006.file_io.obuf_file examples.0006.file_io.obuf_file)
add_executable(examples.0006.file_io.utf8_to_utf16 ${CMAKE_CURRENT_LIST_DIR}/utf8_to_utf16.cc)
add_test(examples.0006.file_io.utf8_to_utf16 examples.0006.file_io.utf8_to_utf16)
