add_executable(examples__0007.legacy__construct_fp_from_syscall.cc construct_fp_from_syscall.cc)
add_test(examples__0007.legacy__construct_fp_from_syscall.cc examples__0007.legacy__construct_fp_from_syscall.cc)
add_executable(examples__0007.legacy__construct_fstream_from_syscall.cc construct_fstream_from_syscall.cc)
add_test(examples__0007.legacy__construct_fstream_from_syscall.cc examples__0007.legacy__construct_fstream_from_syscall.cc)
add_executable(examples__0007.legacy__construct_fstream_from_syscall_l10n.cc construct_fstream_from_syscall_l10n.cc)
add_test(examples__0007.legacy__construct_fstream_from_syscall_l10n.cc examples__0007.legacy__construct_fstream_from_syscall_l10n.cc)
add_executable(examples__0007.legacy__c_file.cc c_file.cc)
add_test(examples__0007.legacy__c_file.cc examples__0007.legacy__c_file.cc)
add_executable(examples__0007.legacy__filebuf_file.cc filebuf_file.cc)
add_test(examples__0007.legacy__filebuf_file.cc examples__0007.legacy__filebuf_file.cc)
add_executable(examples__0007.legacy__filebuf_file_ostream.cc filebuf_file_ostream.cc)
add_test(examples__0007.legacy__filebuf_file_ostream.cc examples__0007.legacy__filebuf_file_ostream.cc)
add_executable(examples__0007.legacy__get_file_descriptor_from_std_cout.cc get_file_descriptor_from_std_cout.cc)
add_test(examples__0007.legacy__get_file_descriptor_from_std_cout.cc examples__0007.legacy__get_file_descriptor_from_std_cout.cc)
add_executable(examples__0007.legacy__text.cc text.cc)
add_test(examples__0007.legacy__text.cc examples__0007.legacy__text.cc)
add_executable(examples__0007.legacy__textposix.cc textposix.cc)
add_test(examples__0007.legacy__textposix.cc examples__0007.legacy__textposix.cc)
