add_executable(examples.0007.legacy.construct_fp_from_syscall ${CMAKE_CURRENT_LIST_DIR}/construct_fp_from_syscall.cc)
add_test(examples.0007.legacy.construct_fp_from_syscall examples.0007.legacy.construct_fp_from_syscall)
add_executable(examples.0007.legacy.construct_fstream_from_syscall ${CMAKE_CURRENT_LIST_DIR}/construct_fstream_from_syscall.cc)
add_test(examples.0007.legacy.construct_fstream_from_syscall examples.0007.legacy.construct_fstream_from_syscall)
add_executable(examples.0007.legacy.construct_fstream_from_syscall_l10n ${CMAKE_CURRENT_LIST_DIR}/construct_fstream_from_syscall_l10n.cc)
add_test(examples.0007.legacy.construct_fstream_from_syscall_l10n examples.0007.legacy.construct_fstream_from_syscall_l10n)
add_executable(examples.0007.legacy.c_file ${CMAKE_CURRENT_LIST_DIR}/c_file.cc)
add_test(examples.0007.legacy.c_file examples.0007.legacy.c_file)
add_executable(examples.0007.legacy.filebuf_file ${CMAKE_CURRENT_LIST_DIR}/filebuf_file.cc)
add_test(examples.0007.legacy.filebuf_file examples.0007.legacy.filebuf_file)
add_executable(examples.0007.legacy.filebuf_file_ostream ${CMAKE_CURRENT_LIST_DIR}/filebuf_file_ostream.cc)
add_test(examples.0007.legacy.filebuf_file_ostream examples.0007.legacy.filebuf_file_ostream)
add_executable(examples.0007.legacy.get_file_descriptor_from_std_cout ${CMAKE_CURRENT_LIST_DIR}/get_file_descriptor_from_std_cout.cc)
add_test(examples.0007.legacy.get_file_descriptor_from_std_cout examples.0007.legacy.get_file_descriptor_from_std_cout)
add_executable(examples.0007.legacy.text ${CMAKE_CURRENT_LIST_DIR}/text.cc)
add_test(examples.0007.legacy.text examples.0007.legacy.text)
add_executable(examples.0007.legacy.textposix ${CMAKE_CURRENT_LIST_DIR}/textposix.cc)
add_test(examples.0007.legacy.textposix examples.0007.legacy.textposix)
