add_executable(examples__0009.filesystem__add_utf8_bom_to_all_cplusplus_files.cc add_utf8_bom_to_all_cplusplus_files.cc)
add_test(examples__0009.filesystem__add_utf8_bom_to_all_cplusplus_files.cc examples__0009.filesystem__add_utf8_bom_to_all_cplusplus_files.cc)
add_executable(examples__0009.filesystem__binary_to_text.cc binary_to_text.cc)
add_test(examples__0009.filesystem__binary_to_text.cc examples__0009.filesystem__binary_to_text.cc)
add_executable(examples__0009.filesystem__count_lines_in_cpp_files.cc count_lines_in_cpp_files.cc)
add_test(examples__0009.filesystem__count_lines_in_cpp_files.cc examples__0009.filesystem__count_lines_in_cpp_files.cc)
add_executable(examples__0009.filesystem__count_rust_files.cc count_rust_files.cc)
add_test(examples__0009.filesystem__count_rust_files.cc examples__0009.filesystem__count_rust_files.cc)
add_executable(examples__0009.filesystem__gccx86canadianfix.cc gccx86canadianfix.cc)
add_test(examples__0009.filesystem__gccx86canadianfix.cc examples__0009.filesystem__gccx86canadianfix.cc)
add_executable(examples__0009.filesystem__gcc_symlink_install.cc gcc_symlink_install.cc)
add_test(examples__0009.filesystem__gcc_symlink_install.cc examples__0009.filesystem__gcc_symlink_install.cc)
add_executable(examples__0009.filesystem__libtoolcanadianfix.cc libtoolcanadianfix.cc)
add_test(examples__0009.filesystem__libtoolcanadianfix.cc examples__0009.filesystem__libtoolcanadianfix.cc)
add_executable(examples__0009.filesystem__list_files.cc list_files.cc)
add_test(examples__0009.filesystem__list_files.cc examples__0009.filesystem__list_files.cc)
add_executable(examples__0009.filesystem__rename_all_files_uppercase_to_lowercase.cc rename_all_files_uppercase_to_lowercase.cc)
add_test(examples__0009.filesystem__rename_all_files_uppercase_to_lowercase.cc examples__0009.filesystem__rename_all_files_uppercase_to_lowercase.cc)
add_executable(examples__0009.filesystem__text_to_binary.cc text_to_binary.cc)
add_test(examples__0009.filesystem__text_to_binary.cc examples__0009.filesystem__text_to_binary.cc)
add_executable(examples__0009.filesystem__update_wow_toc.cc update_wow_toc.cc)
add_test(examples__0009.filesystem__update_wow_toc.cc examples__0009.filesystem__update_wow_toc.cc)
