add_executable(examples.0009.filesystem.add_utf8_bom_to_all_cplusplus_files ${CMAKE_CURRENT_LIST_DIR}/add_utf8_bom_to_all_cplusplus_files.cc)
add_test(examples.0009.filesystem.add_utf8_bom_to_all_cplusplus_files examples.0009.filesystem.add_utf8_bom_to_all_cplusplus_files)
add_executable(examples.0009.filesystem.binary_to_text ${CMAKE_CURRENT_LIST_DIR}/binary_to_text.cc)
add_test(examples.0009.filesystem.binary_to_text examples.0009.filesystem.binary_to_text)
add_executable(examples.0009.filesystem.count_lines_in_cpp_files ${CMAKE_CURRENT_LIST_DIR}/count_lines_in_cpp_files.cc)
add_test(examples.0009.filesystem.count_lines_in_cpp_files examples.0009.filesystem.count_lines_in_cpp_files)
add_executable(examples.0009.filesystem.count_rust_files ${CMAKE_CURRENT_LIST_DIR}/count_rust_files.cc)
add_test(examples.0009.filesystem.count_rust_files examples.0009.filesystem.count_rust_files)
add_executable(examples.0009.filesystem.gccx86canadianfix ${CMAKE_CURRENT_LIST_DIR}/gccx86canadianfix.cc)
add_test(examples.0009.filesystem.gccx86canadianfix examples.0009.filesystem.gccx86canadianfix)
add_executable(examples.0009.filesystem.gcc_symlink_install ${CMAKE_CURRENT_LIST_DIR}/gcc_symlink_install.cc)
add_test(examples.0009.filesystem.gcc_symlink_install examples.0009.filesystem.gcc_symlink_install)
add_executable(examples.0009.filesystem.libtoolcanadianfix ${CMAKE_CURRENT_LIST_DIR}/libtoolcanadianfix.cc)
add_test(examples.0009.filesystem.libtoolcanadianfix examples.0009.filesystem.libtoolcanadianfix)
add_executable(examples.0009.filesystem.list_files ${CMAKE_CURRENT_LIST_DIR}/list_files.cc)
add_test(examples.0009.filesystem.list_files examples.0009.filesystem.list_files)
add_executable(examples.0009.filesystem.rename_all_files_uppercase_to_lowercase ${CMAKE_CURRENT_LIST_DIR}/rename_all_files_uppercase_to_lowercase.cc)
add_test(examples.0009.filesystem.rename_all_files_uppercase_to_lowercase examples.0009.filesystem.rename_all_files_uppercase_to_lowercase)
add_executable(examples.0009.filesystem.text_to_binary ${CMAKE_CURRENT_LIST_DIR}/text_to_binary.cc)
add_test(examples.0009.filesystem.text_to_binary examples.0009.filesystem.text_to_binary)
add_executable(examples.0009.filesystem.update_wow_toc ${CMAKE_CURRENT_LIST_DIR}/update_wow_toc.cc)
add_test(examples.0009.filesystem.update_wow_toc examples.0009.filesystem.update_wow_toc)
